# pyc_cleaner

./: .gitignore  LICENSE  README.md  setup.cfg
pyc_cleaner/src/: main.py
src/pyc_cleaner/: main.py  pyc_logging.py
