[metadata]
name = pyc_cleaner
version = 0.0.1
description = Python cache cleaning tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/whyme0/pyc_cleaner
project_urls =
    Bug Tracker = https://github.com/whyme0/pyc_cleaner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = src